[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Script/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -70.0
margin_right = 40.0
margin_bottom = 70.0
rect_scale = Vector2( 4, 2.5 )
rect_pivot_offset = Vector2( 40, 70 )
custom_constants/separation = 13
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 91.0
margin_bottom = 14.0
text = "Highscore: 0"

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 91.0
margin_bottom = 47.0
action_mode = 0
text = "Start"

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 91.0
margin_bottom = 80.0
action_mode = 0
text = "Leaderboard"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 91.0
margin_bottom = 113.0
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 91.0
margin_bottom = 146.0
text = "Quit"

[node name="Button" type="Button" parent="."]
margin_left = 32.0
margin_top = 648.0
margin_right = 72.0
margin_bottom = 688.0
text = "i"

[node name="Name" type="Label" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 222.0
margin_bottom = 54.0
rect_scale = Vector2( 2.5, 2.5 )
text = "dummyyyyyyyyyyyyyyyyyyyy"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
